--- a/documentation/HazardAnalysis/HazardAnalysis.tex
+++ b/documentation/HazardAnalysis/HazardAnalysis.tex
@@ -75,6 +75,7 @@
    \hline
    \textbf{Date} & \textbf{Revision} & \textbf{Comments} & \textbf{Author(s)} \\ \hline
    Dec 29, 2017 & 1.0 & Main content done for all sections & Christopher McDonald \\ \hline
+   Jan 1, 2018 & 2.0 & Edit entire document & Sharon Platkin \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -84,7 +85,7 @@
 SmartServe is an autonomous table tennis training system for table tennis players with various skill levels. SmartServe aids in diagnosing and improving a player's performance over time. The system trains table tennis players by shooting table tennis balls towards the player and detects successful returns from the player. The system can further adapt to the player's weaknesses and help them overcome it through further training. Importantly, SmartServe alleviates the problems of finding and working with a coach for players, as well as coaches trying to train multiple players simultaneously. The system will be deemed a success if the table tennis players and coaches can enjoy and see some value added by using SmartServe.\\ \\
 The project started at the beginning of the Fall 2017 academic term and will conclude at the end of the Winter 2018 term. In addition, the core project team consists of final year Software and Mechatronics Engineering students who are enrolled in the MECHTRON 4TB6/SFWRENG 4G06 capstone project course.
 \subsection{Document Overview}
-This document will cover all potential hazards that a user may encounter when using the SmartServe system. For each hazard, a description, mitigation plan and a fault tree to cover all potential situations in which the hazard would arise. A description of the system, its scope and boundary will be provided in order to support and provide context to the hazards included.
+This document will cover all potential hazards that a user may encounter when using the SmartServe system. For each hazard, a description, mitigation plan, and a fault tree to cover all potential situations in which the hazard would arise are included. Additionally, a description of the system, its scope, and boundary will be provided in order to support and provide context to the hazards.
 \subsection{Naming Conventions and Terminology}
 \label{sec:definitions}
 The following terms and definitions will be used throughout this document:
@@ -95,6 +96,7 @@ The following terms and definitions will be used throughout this document:
 \item \textbf{FSM}: finite state machine, shows transitions between states
 \item \textbf{GUI}: graphical user interface
 \item \textbf{IPO}: input process output
+\item \textbf{ITTF}: International Table Tennis Federation
 \item \textbf{Pitch}: rotation along the y-axis; this rotation angle primarily dictates the range of the ball from the net to the edge of the table on the user side
 \item \textbf{Roll}: rotation along the x-axis
 \item \textbf{Shooting Mechanism}: refers to the part of the system that shoots the table tennis balls towards the user side (player) Please refer to Figure \ref{fig:table-tennis-top-view} for visual illustration
@@ -115,15 +117,15 @@ The following terms and definitions will be used throughout this document:
 
 \section{System}
 \subsection{High-Level Design}
-The high-level design document covers in great detail the design of the system and can be found \href{run:../SystemDesign/Design.pdf}{here}. As a summary, the mechanical aspects include a hopper to hold all the table tennis balls and a spinning disk with cut outs to force feed the balls into the barrel. The barrel can hold many balls and they are pushed up the barrel as the aforementioned disk spins. Once a ball reached the end of the barrel, it will shoot the ball out via a spinning wheel affixed to the end of the barrel. The entire mechanism is affixed to a rotating platform to have variable yaw. The spinning wheel can shoot at various speeds by spinning faster and slower. \\ \\
-The electrical components include an Arduino, breadboard and power supply to control the motors needed to spin the mechanism and wheel. There will also be a general computer to run the software-based components and a USB camera to use for the computer vision system. 
+The high-level design document covers in great detail the design of the system and can be found \href{run:../SystemDesign/Design.pdf}{here}. As a summary, the mechanical aspects include a hopper to hold all the table tennis balls and a spinning disk with cut outs to force feed the balls into the barrel. The barrel can hold many balls and they are pushed up the barrel as the aforementioned disk spins. Once a ball reaches the end of the barrel, it will shoot the ball out via a spinning wheel affixed to the end of the barrel. The entire mechanism is fixed to a rotating platform to have variable yaw. The spinning wheel can shoot at various speeds. \\ \\
+The electrical components include an Arduino, breadboard and power supply to control the motors needed to spin the mechanism and wheel. There will also be a general purpose computer to run the software-based components and a USB camera to use for the computer vision system. 
 \subsection{Scope \& Boundary}
 The hazards outlined below will cover the hardware, electrical and software aspects of the SmartServe system. \\ \\
-The hazards do not include any which would be a result of intentionally misuse or destruction of the system. The user is assumed to be using fully-functioning and maintained equipment including the table tennis balls, table and paddles. The electrical equipment used is assumed to be working at production performance which includes all electrical wiring, components, boards and motors.   
+Intentional misuse or destruction of the system will not be discussed as it is outside the scope of this document. The user is assumed to be using fully-functioning and maintained equipment including the table tennis balls, table and paddles. All electrical equipment is assumed to be working at production performance which includes all electrical wiring, components, boards and motors.   
 \section{Hazards}
 \subsection{User is struck by an air-borne ball}
 \subsubsection*{Description}
-The machine will be shooting balls towards the user for them to return. For normal shots, it should always hit the table first before hitting a player. Not only is this a rule for valid shots as per ITTFF rules, it will ensure a sufficient amount of time for the user to react. However, the system could shot the ball directly towards the player without hitting the table. This could potentially cause damage to the face or eyes if the ball is travelling fast enough.
+The machine will be shooting balls towards the user for them to return. For normal shots, it should always hit the table on the user side first before hitting a player. Not only is this a rule for valid shots as per the International Table Tennis Federation(ITTF) rules, it will ensure a sufficient amount of time for the user to react. However, the system could shoot the ball directly towards the player without hitting the table. This could potentially cause damage to the face or eyes of the player if the ball is travelling fast enough.
 \subsubsection*{Mitigation Plan}
 The system should never attempt to take a shot which exceeds the length of the user's side of the table. However, if a user were to replace the table with a smaller one without calibration or if some bug does make the spinning wheel spin faster than allowed, this could happen. The motor for the spinning wheel should have a maximum voltage in order to ensure the ball isn't shot at high speeds which would cause damage. \\ \\
 The fault analysis tree can be found in Figure \ref{fig:ft-Air}.
@@ -131,14 +133,14 @@ The fault analysis tree can be found in Figure \ref{fig:ft-Air}.
    \centering
    \includegraphics[width=0.7\textwidth]{img/ft-Air.png} % requires the graphicx package
    \caption{Fault Analysis Tree for \textit{User is struck by an air-borne ball}}
-   \label{fig:ft-Air}
+   \label{fig:ft-Air} %TODO: ITTFF should be ITTF
 \end{figure}
 
 \subsection{User is caught in a Pinch Point}
 \subsubsection*{Description}
-The system will include moving mechanisms to shoot balls toward the player in a variety of ways. This means that two pieces could be moving next to one another and a user's finger, or other extremity, could be caught in between the two pieces. This can cause damage to the user and the system. The system can break the users skin or bones and the motors and materials can break if given enough force.
+The system will include moving mechanisms to shoot balls toward the player in a variety of ways. This means that two pieces could be moving next to one another. This may lead to a user's finge or other extremity being caught in between the two pieces. This can cause damage to the user and the system. The system can break the users skin or bones and the motors and materials can break if given enough force.
 \subsubsection*{Mitigation Plan}
-The number of pinch points should be minimized in order to avoid the chance of this happening. In the event one is unable to be avoided, proper notices and warnings will be used to discourage accidental exposure of the user's extremeties to the pinch points. \\ \\
+The number of pinch points should be minimized in order to avoid the chance of this happening. In the event one is unable to be avoided, proper notices and warnings will be used to discourage accidental exposure of the user's extremeties to the pinch points. Additionally, guards will be installed wherever possible. \\ \\
 The fault analysis tree can be found in Figure \ref{fig:ft-pinch}.
 
 \begin{figure}[H]
@@ -152,7 +154,7 @@ The fault analysis tree can be found in Figure \ref{fig:ft-pinch}.
 \subsubsection*{Description}
 The system will require electrical components in order to activate motors. This will also include power balancing and transfer to the necessary components. This means some wiring will be needed and thus some inherent risk of shock to the user via such wiring or the sensors or actuators themselves. Only when the wires carry current would this be a risk.
 \subsubsection*{Mitigation Plan}
-All wiring will be enclosed to the best of our ability. However, due to the nature of the system requiring motion it can be difficult to completely enclose the system. Proper warnings and notices will be used to warn the user of electrical current. The system should also have a fail-safe which cuts power if it short circuits. \\ \\
+All wiring will be enclosed to the best of our ability. However, due to the nature of the system requiring motion it can be difficult to completely enclose the system. Proper warnings and notices will be used to warn the user of electrical current. The system will also be fused to prevent prolonged short circuits. \\ \\
 
 The fault analysis tree can be found in Figure \ref{fig:ft-electric}.
 
@@ -165,9 +167,9 @@ The fault analysis tree can be found in Figure \ref{fig:ft-electric}.
 
 \subsection{User's appendage is caught in machine}
 \subsubsection*{Description}
-Similar to a user's extremity, any loose appendages can also be of risk due to moving parts. An appendage could be a necklace, bracelet or any added-on accessory. The risk goes up substantially for those appendages which are loose. When the machine is moving, the appendage could get caught on or in between moving parts. When caught it could damage the appendage, the machine or the user.
+Similar to a user's extremity, any loose appendages can also be of risk due to moving parts. An appendage could be a necklace, bracelet or any accessory. The risk goes up substantially for loose appendages. When the machine is moving, the appendage could get caught on or in between moving parts. When caught it could damage the appendage, the machine or the user.
 \subsubsection*{Mitigation Plan}
-The user must be warned not to wear such appendages when using this system. The number of points which would be vulnerable should be minimized. Similar to the extremity hazard, the locations which are vulnerable will be labelled appropriately. \\ \\
+The user must be warned not to wear such appendages when using this system. The number of points which would be vulnerable should be minimized. Similar to the extremity hazard, the locations which are vulnerable will be labelled appropriately and guarded. \\ \\
 
 The fault analysis tree can be found in Figure \ref{fig:ft-appendage}.
 
@@ -182,7 +184,7 @@ The fault analysis tree can be found in Figure \ref{fig:ft-appendage}.
 \subsubsection*{Description}
 The system is vulnerable to friction and overheating via electricity. This could cause mechanical failure where parts are damaged by this heat. It could also cause burns for a user who tries to handle the system when it overheats.
 \subsubsection*{Mitigation Plan}
-The system should shutdown after extreme prolonged use and designed in such a way that minimal power is delivered which does not have a load to bear it. \\ \\
+The system should shutdown after extreme prolonged use and is designed with appropriate fusing such that the power supply never exceeds electric load. \\ \\
 
 The fault analysis tree can be found in Figure \ref{fig:ft-overheat}.
 
@@ -197,7 +199,7 @@ The fault analysis tree can be found in Figure \ref{fig:ft-overheat}.
 \subsubsection*{Description}
 As stated before, the system will contain moving parts to shoot in a variety of ways. A foreign object could be in the path which the system needs to travel. The system will attempt to travel this distance and if the foreign object isn't moved, either by the user or the machine itself, it could cause damage to the motors and mechanical parts of the system.
 \subsubsection*{Mitigation Plan}
-The user should ensure the system is clear of foreign objects within a certain radius of the machine and will be reminded to do so upon booting. \\ \\
+The user should ensure the system is clear of foreign objects within a certain radius of the machine and will be reminded to do so upon booting up the system. \\ \\
 
 The fault analysis tree can be found in Figure \ref{fig:ft-traverse}.
 
